--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,6 @@
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents">%sveltekit.body%</div>
+    <div style="display: contents" class="overflow-hidden h-full">%sveltekit.body%</div>
   </body>
 </html>
