migrate config & theming

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
     <title>電機社好爽</title>
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
+  <body data-sveltekit-preload-data="hover" data-theme="rose-pine-moon">
     <div style="display: contents" class="overflow-hidden h-full">%sveltekit.body%</div>
   </body>
 </html>
