--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,6 @@
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover" data-theme="rose-pine-moon">
-    <div style="display: contents" class="overflow-hidden h-full">%sveltekit.body%</div>
+    <div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
   </body>
 </html>
