make navbar layout

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,8 @@
     <title>電機社好爽</title>
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" data-theme="rose-pine-moon">
-    <div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
+  <body data-sveltekit-preload-data="hover" class="dark">
+    <!-- TODO: bright/dark theme switch -->
+    %sveltekit.body%
   </body>
 </html>
