--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -7,8 +7,7 @@
     <title>電機社好爽</title>
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="dark">
-    <!-- TODO: bright/dark theme switch -->
-    %sveltekit.body%
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
